--- a/css/main.css
+++ b/css/main.css
@@ -120,11 +120,15 @@ body {
   font-size: 1.6rem;
   font-weight: bold;
   text-transform: capitalize;
-  letter-spacing: 2rem;
+  letter-spacing: .2rem;
   cursor: pointer;
   position: relative;
   z-index: 1;
   overflow: hidden;
+  height: 3.5rem;
+  width: 14rem;
+  background: #ccc;
+  color: #333;
   height: 4rem;
   width: 14rem;
   background: #fff;
@@ -257,11 +261,15 @@ body {
   font-size: 1.6rem;
   font-weight: bold;
   text-transform: capitalize;
-  letter-spacing: 2rem;
+  letter-spacing: .2rem;
   cursor: pointer;
   position: relative;
   z-index: 1;
   overflow: hidden;
+  height: 3.5rem;
+  width: 14rem;
+  background: #ccc;
+  color: #333;
   height: 3.5rem;
   width: 14rem;
   background: #333;
@@ -292,6 +300,436 @@ body {
 #special .card-container .card:hover {
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
+}
+
+#about .heading h1 {
+  font-size: 4rem;
+  color: #000;
+  padding-top: 7rem;
+  margin-bottom: 2rem;
+}
+
+#about .heading h1 span {
+  color: #FFF200;
+}
+
+#about .content {
+  margin: 5rem auto;
+}
+
+#about .content p {
+  font-size: 2rem;
+}
+
+#about .content button {
+  outline: none;
+  border: none;
+  border-radius: 5rem;
+  color: #333;
+  font-size: 1.6rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  letter-spacing: .2rem;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  height: 3.5rem;
+  width: 14rem;
+  background: #ccc;
+  color: #333;
+  height: 4rem;
+  width: 14rem;
+  background: #333;
+  color: #fff;
+}
+
+#about .content button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #FFF200;
+  height: 100%;
+  width: 0%;
+  -webkit-transition: .2s;
+  transition: .2s;
+  z-index: -1;
+}
+
+#about .content button:hover::before {
+  width: 100%;
+}
+
+#about .content button:hover {
+  color: #333;
+}
+
+#about .image img {
+  width: 45vw;
+}
+
+#cardapio {
+  min-height: 100vh;
+  width: 100vw;
+}
+
+#cardapio .heading h1 {
+  font-size: 4rem;
+  color: #000;
+  padding-top: 7rem;
+  margin-bottom: 2rem;
+}
+
+#cardapio .heading h1 span {
+  color: #FFF200;
+}
+
+#cardapio .box-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 1rem auto;
+  width: 90%;
+}
+
+#cardapio .box-container .box {
+  height: 20rem;
+  width: 25rem;
+  border-radius: .5rem;
+  margin: 2rem;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  -webkit-box-shadow: 0 0 .5rem #333;
+          box-shadow: 0 0 .5rem #333;
+}
+
+#cardapio .box-container .box img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#cardapio .box-container .box .info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(51, 51, 51, 0.6);
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  color: #fff;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+#cardapio .box-container .box .info h3 {
+  font-size: 3rem;
+}
+
+#cardapio .box-container .box .info p {
+  font-size: 1.3rem;
+  border-bottom: 0.2rem solid #FFF200;
+  border-top: 0.2rem solid #FFF200;
+  margin: 1rem 2rem;
+}
+
+#cardapio .box-container .box .info button {
+  outline: none;
+  border: none;
+  border-radius: 5rem;
+  color: #333;
+  font-size: 1.6rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  letter-spacing: .2rem;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  height: 3.5rem;
+  width: 14rem;
+  background: #ccc;
+  color: #333;
+  height: 4rem;
+  width: 14rem;
+}
+
+#cardapio .box-container .box .info button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #FFF200;
+  height: 100%;
+  width: 0%;
+  -webkit-transition: .2s;
+  transition: .2s;
+  z-index: -1;
+}
+
+#cardapio .box-container .box .info button:hover::before {
+  width: 100%;
+}
+
+#cardapio .box-container .box:hover .info {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+#booking {
+  min-height: 100vh;
+  width: 100vw;
+  background: url("/images/back.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#booking .heading h1 {
+  font-size: 4rem;
+  color: #000;
+  padding-top: 7rem;
+  margin-bottom: 2rem;
+}
+
+#booking .heading h1 span {
+  color: #FFF200;
+}
+
+#booking form {
+  background: #fff;
+  padding-top: 2rem;
+  margin: 1rem 2rem;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0 0 2rem #333;
+          box-shadow: 0 0 2rem #333;
+}
+
+#booking form .inputBox {
+  position: relative;
+  text-align: center;
+}
+
+#booking form .inputBox input, #booking form .inputBox textarea {
+  outline: none;
+  border: .2rem solid #333;
+  border-radius: .2rem;
+  margin: 2rem 0;
+  padding: 0 1rem;
+  background: none;
+  height: 4rem;
+  width: 90%;
+  font-size: 2rem;
+}
+
+#booking form .inputBox input:focus ~ h3,
+#booking form .inputBox input:valid ~ h3, #booking form .inputBox textarea:focus ~ h3,
+#booking form .inputBox textarea:valid ~ h3 {
+  font-size: 1.6rem;
+  left: 6%;
+  top: -.5rem;
+  color: #1100fff5;
+}
+
+#booking form .inputBox textarea {
+  padding: 1rem;
+  resize: none;
+  height: 20rem;
+}
+
+#booking form .inputBox h3 {
+  position: absolute;
+  top: 3rem;
+  left: 7%;
+}
+
+#booking form input[type="submit"] {
+  outline: none;
+  border: none;
+  border-radius: 5rem;
+  color: #333;
+  font-size: 1.6rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  letter-spacing: .2rem;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  height: 3.5rem;
+  width: 14rem;
+  background: #ccc;
+  color: #333;
+  height: 4rem;
+  width: 12rem;
+  margin-bottom: 2rem;
+  margin-left: 4%;
+  background: #333;
+  color: #fff;
+}
+
+#booking form input[type="submit"]::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #FFF200;
+  height: 100%;
+  width: 0%;
+  -webkit-transition: .2s;
+  transition: .2s;
+  z-index: -1;
+}
+
+#booking form input[type="submit"]:hover::before {
+  width: 100%;
+}
+
+#booking form input[type="submit"]:hover {
+  color: #333;
+  background: #FFF200;
+}
+
+#footer {
+  background: #333;
+}
+
+#footer h1 {
+  font-size: 2rem;
+  margin: 0;
+  padding: 2rem 0;
+  text-align: center;
+  color: #fff;
+}
+
+#footer h1 span {
+  color: #FFF200;
+}
+
+#footer .brand {
+  text-align: center;
+  margin-top: 2rem;
+}
+
+#footer .brand a .logo img {
+  height: 4rem;
+}
+
+#footer .brand .icons a {
+  font-size: 2rem;
+  margin: 2rem 1rem;
+  color: #fff;
+}
+
+#footer .brand .icons a:hover {
+  color: #FFF200;
+}
+
+#footer .footer-links {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  margin: 1rem 0;
+}
+
+#footer .footer-links h3 {
+  font-size: 2.2rem;
+  color: #FFF200;
+}
+
+#footer .footer-links a {
+  color: #fff;
+  font-size: 1.7rem;
+}
+
+#footer .letter h2 {
+  font-size: 2rem;
+  margin: 2rem 0;
+  color: #fff;
+}
+
+#footer .letter input[type="text"] {
+  border: .2rem solid #fff;
+  outline: none;
+  background: none;
+  height: 4rem;
+  width: 22rem;
+  padding: 0 1rem;
+  font-size: 1.3rem;
+  color: #fff;
+}
+
+#footer .letter input[type="submit"] {
+  outline: none;
+  border: none;
+  border-radius: 5rem;
+  color: #333;
+  font-size: 1.6rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  letter-spacing: .2rem;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  height: 3.5rem;
+  width: 14rem;
+  background: #ccc;
+  color: #333;
+  height: 4rem;
+  width: 12rem;
+  margin: 1rem 0;
+  background: #fff;
+  color: #333;
+}
+
+#footer .letter input[type="submit"]::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #FFF200;
+  height: 100%;
+  width: 0%;
+  -webkit-transition: .2s;
+  transition: .2s;
+  z-index: -1;
+}
+
+#footer .letter input[type="submit"]:hover::before {
+  width: 100%;
+}
+
+#footer .letter input[type="submit"]:hover {
+  color: #333;
+  background: #FFF200;
 }
 
 .fa-times {
@@ -337,6 +775,12 @@ body {
   }
   #header .nav-toggle {
     left: 0%;
+  }
+  #about .image {
+    text-align: center;
+  }
+  #about .image img {
+    width: 70vw;
   }
 }
 /*# sourceMappingURL=main.css.map */
