--- a/css/main.scss
+++ b/css/main.scss
@@ -2,27 +2,31 @@ $yellow: #FFF200;
 
 
 @mixin button(){
-    outline:none;
-    border:none;
+    outline: none;
+    border: none;
     border-radius: 5rem;
-    color:#333;
+    color: #333;
     font-size: 1.6rem;
     font-weight: bold;
     text-transform: capitalize;
-    letter-spacing: 2rem;
+    letter-spacing: .2rem;
     cursor: pointer;
     position: relative;
     z-index: 1;
-    overflow:hidden;
+    overflow: hidden;
+    height: 3.5rem;
+    width: 14rem;
+    background: #ccc;
+    color: #333;
 
     &::before{
-        content:'';
+        content: '';
         position: absolute;
-        top:0; 
-        left:0;
+        top: 0;
+        left: 0;
         background: $yellow;
         height: 100%;
-        width:0%;
+        width: 0%;
         transition: .2s;
         z-index: -1;
     }
@@ -34,14 +38,15 @@ $yellow: #FFF200;
 
 @mixin heading() {
 
-    font-size: 4rem;
-    color: #000;
-    padding-top: 7rem;
-    margin-bottom: 2rem;
-
-    span{
-        color: $yellow;
-    }
+    
+        font-size: 4rem;
+        color: #000;
+        padding-top: 7rem;
+        margin-bottom: 2rem;
+        span {
+            color: #FFF200;
+        }
+    
     
 }
 
@@ -271,9 +276,309 @@ body{
     }
 
 }
-
-
 // special menu ends
+
+//section sobre nós starts
+
+#about{
+    .heading{        
+        h1{
+        @include heading();
+        }
+    }
+    .content{
+        margin: 5rem auto;
+
+        p {
+            font-size: 2rem;
+        }
+        
+        button{
+            @include button();
+            height: 4rem;
+			width: 14rem;
+			background: #333;
+			color: #fff;
+        
+            &:hover{
+                color: #333;
+            }        
+        }
+    }    
+    .image {
+	        img {
+	            width: 45vw;
+	        }
+    }  
+}
+//section sobre nós ends
+
+
+//Section pratos starts
+
+#cardapio{
+    min-height: 100vh;
+    width: 100vw;
+
+    .heading{        
+        h1{
+        @include heading();
+        }
+    }
+
+    .box-container{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin: 1rem auto;
+        width: 90%;
+
+        .box{
+            height: 20rem;
+            width: 25rem;
+            border-radius: .5rem;
+            margin: 2rem;
+            cursor: pointer;
+            overflow: hidden;
+            position: relative;
+            box-shadow: 0 0 .5rem #333;
+
+            img{
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+
+            .info{
+                position: absolute;
+                top: 0; left: 0;
+                height: 100%;
+                width: 100%;
+                background: rgba(51,51,51,.6);
+                text-align: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-flow: column;
+                color: #fff;
+                transform: scale(0);
+                
+
+                h3{
+                    font-size: 3rem;
+                }
+                p{
+                    font-size:  1.3rem;
+                    border-bottom: .2rem solid $yellow;
+                    border-top: .2rem solid $yellow;
+                    margin: 1rem 2rem;
+                }
+
+                button{
+                    @include button();
+                    
+                    height: 4rem;
+                    width: 14rem;                     
+                }
+            }
+
+            &:hover { .info{
+                transform: scale(1);
+                }
+            }      
+        }
+    }
+}
+//Section pratos ends
+
+
+//Section booking --reserva - starts
+
+#booking{
+    min-height: 100vh;
+    width: 100vw;
+    background: url('/images/back.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    .heading{        
+        h1{
+        @include heading();
+        }
+    }
+
+    form{
+        background: #fff;
+        padding-top: 2rem;
+        margin: 1rem 2rem;
+        border-radius: 1rem;
+        box-shadow: 0 0 2rem #333;
+        
+
+        .inputBox{
+            position:relative;
+            text-align: center;
+
+            input, textarea{
+                outline: none;
+                border: .2rem solid #333;
+                border-radius: .2rem;
+                margin:2rem 0;
+                padding: 0 1rem;
+                background: none;
+                height: 4rem;
+                width: 90%;
+                font-size: 2rem;
+
+                &:focus ~ h3,
+                &:valid ~ h3{
+
+                    font-size: 1.6rem;
+                    left:6%;
+                    top:-.5rem;
+                    color: #1100fff5;
+
+                }
+
+
+
+            }
+
+            textarea{
+                padding: 1rem;
+                resize: none;
+                height: 20rem;
+
+            }
+
+            h3{
+                position: absolute;
+                top: 3rem; left: 7%;
+
+            }
+        }
+        input[type="submit"]{
+            @include button();
+            height: 4rem;
+            width: 12rem;
+            margin-bottom: 2rem;
+            margin-left: 4%;
+            background: #333;
+            color: #fff;
+
+            &:hover{
+                color: #333;
+                background: $yellow;
+
+            }
+
+        }
+    }
+}
+//Section booking --reserva - ends
+
+
+//Fotter section
+
+#footer{
+    background: #333;
+
+    h1{
+
+        font-size: 2rem;
+        margin: 0;
+        padding: 2rem 0;
+        text-align: center;
+        color: #fff;
+
+        span{
+            color:$yellow;
+        }
+
+    }
+    .brand{
+        text-align: center;
+        margin-top: 2rem;
+
+        a{
+            .logo{
+                img{
+                    height: 4rem;
+                }
+            }
+        }
+
+        .icons{
+            a{
+                font-size: 2rem;
+                margin: 2rem 1rem;
+                color:#fff;
+
+                &:hover{
+                    color:$yellow;
+
+                }
+            }
+
+        }
+
+    }
+    .footer-links{
+        text-align: center;
+        display: flex;
+        flex-flow: column;
+        margin: 1rem 0;
+    
+
+        h3{
+            font-size: 2.2rem;
+            color: $yellow;
+        }
+
+        a{
+            color: #fff;
+            font-size: 1.7rem;
+        }
+    }
+    .letter{
+        h2{
+            font-size: 2rem;
+            margin:2rem 0;
+            color: #fff;
+        }
+        input[type="text"]{
+            border:.2rem solid #fff;
+            outline: none;
+            background: none;
+            height: 4rem;
+            width: 22rem;
+            padding: 0 1rem;
+            font-size: 1.3rem;
+            color: #fff;
+        }
+        input[type="submit"]{
+            @include button();
+            height: 4rem;
+            width: 12rem;
+            margin:1rem 0;
+            background: #fff;
+            color: #333;
+
+            &:hover{
+                color: #333;
+                background: $yellow;
+
+            }
+
+        }
+
+    }
+
+}
+
+
+
 
 
 
@@ -335,5 +640,12 @@ body{
 
     }
 
-    
+    #about{
+        .image{
+            text-align: center;
+            img{
+                width: 70vw;
+            }
+        }
+    }    
 }
