--- a/css/main.scss
+++ b/css/main.scss
@@ -167,6 +167,25 @@ body{
             background: #fff;
 
         }
+
+        h3{
+            font-size: 2.0rem;
+            
+            color:#fff;
+            margin: 1rem 0;
+        }
+
+        h4{
+            font-size: 3.5rem;            
+            color: $yellow;
+            margin: 1rem 0;
+
+            span{
+                font-size: 3.0rem;     
+                color:#fff;
+            }
+        }
+       
     }
     .video-container{
         position: absolute;
