Update back of the booking

--- a/css/main.scss
+++ b/css/main.scss
@@ -417,7 +417,7 @@ body{
 #booking{
     min-height: 100vh;
     width: 100vw;
-    background: url('/images/back.jpg') no-repeat;
+    background: url(/images/back.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 
