--- a/css/main.css
+++ b/css/main.css
@@ -519,7 +519,7 @@ body {
 #booking {
   min-height: 100vh;
   width: 100vw;
-  background: url("/images/back.jpg") no-repeat;
+  background: url(/images/back.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
