fix responsive in the special card

--- a/css/main.css
+++ b/css/main.css
@@ -244,9 +244,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: wrap;
-      -ms-flex-pack: wrap;
-          justify-content: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 #special .card-container .card {
