--- a/css/main.scss
+++ b/css/main.scss
@@ -253,7 +253,8 @@ body{
         margin: 7rem auto;
         display: flex;
         align-items: center;
-        justify-content: wrap;
+        justify-content: space-around;
+        flex-wrap: wrap;
 
         .card{
             height: 40rem;
